fixed logo sizing on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,4 +30,6 @@
   z-index: 10;
   padding: 0.5 0;
   font-size: 3rem;
+  width: 100%;
+  height: 100%;
 }
